<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_name" />
            <TextView
                android:id="@+id/summary_name"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_location" />
            <TextView
                android:id="@+id/summary_location"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_date" />
            <TextView
                android:id="@+id/summary_date"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_parking_short" />
            <TextView
                android:id="@+id/summary_parking"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_length" />
            <TextView
                android:id="@+id/summary_length"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_difficulty" />
            <TextView
                android:id="@+id/summary_difficulty"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_duration" />
            <TextView
                android:id="@+id/summary_duration"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_terrain" />
            <TextView
                android:id="@+id/summary_terrain"
                style="@style/SummaryValue" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/SummaryLabel"
                android:text="@string/label_description" />
            <TextView
                android:id="@+id/summary_description"
                style="@style/SummaryValue" />
        </TableRow>
    </TableLayout>
</ScrollView>
