<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            tools:title="Snowdon summit loop" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:strokeWidth="1dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:shrinkColumns="1"
                    android:stretchColumns="1">

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_location" />
                        <TextView
                            android:id="@+id/detail_location"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_date" />
                        <TextView
                            android:id="@+id/detail_date"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_parking_short" />
                        <TextView
                            android:id="@+id/detail_parking"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_length" />
                        <TextView
                            android:id="@+id/detail_length"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_difficulty" />
                        <TextView
                            android:id="@+id/detail_difficulty"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_duration" />
                        <TextView
                            android:id="@+id/detail_duration"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_terrain" />
                        <TextView
                            android:id="@+id/detail_terrain"
                            style="@style/SummaryValue" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            style="@style/SummaryLabel"
                            android:text="@string/label_description" />
                        <TextView
                            android:id="@+id/detail_description"
                            style="@style/SummaryValue" />
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
